tests/baselines/reference/continueTarget4.errors.txt
tests/cases/compiler/continueTarget4.ts(1,1): error TS7028: Unused label.


==== tests/cases/compiler/continueTarget4.ts (1 errors) ====
    target1:
    ~~~~~~~
!!! error TS7028: Unused label.
    target2:
    while (true) {
      continue target2;
    }